gap fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -98,10 +98,10 @@ body::-webkit-scrollbar {
   }
 
   .chikkad-madi-gandu {
-    font-size: 24px !important;
+    font-size: 20px !important;
   }
   .gap-to-heading-and-subheading-in-just-forty-recidence-section {
-    margin-bottom: 2rem !important;
+    margin-bottom: 1rem !important;
   }
 
   .forget-boring-balconies-in-lake-lounge-section{
